Fixing, inserted streetview inside infoHtml, font-awesome

--- a/app/index.html
+++ b/app/index.html
@@ -14,9 +14,10 @@
         <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css" />
         <!-- endbower -->
         <!-- endbuild -->
+
         <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
-        <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.css" />
+        <link rel="stylesheet" href="styles/font-awesome.css">
         <!-- endbuild -->
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDFdc00PHJOMNK-riXpOLCIbpLHRz6z5Ck&libraries=places"></script>
     </head>
